--- a/_layouts/lavendeux.html
+++ b/_layouts/lavendeux.html
@@ -10,6 +10,7 @@
 		<meta name="author" content="rscarson">
 
 		<title>{{ page.title }}</title>
+		<link rel="shortcut icon" href="/favicon.ico" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="/css/main.css" rel="stylesheet">
 
@@ -24,11 +25,31 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
                 <a class="navbar-brand" href="/lavendeux/" style="text-decoration: none;">
-                    @rscarson
+                    <img alt="Brand" src="/img/logo.png" class="d-inline-block align-text-middle">
+                    Lavendeux
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-collapse-1" aria-controls="navbar-collapse-1" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
+
+				<div class="collapse navbar-collapse" id="navbar-collapse-1">
+					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/lavendeux">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/lavendeux/downloads">All Downloads</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/rscarson/Lavendeux">View on Github</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/rscarson/Lavendeux/issues/new"">Report a Problem</a>
+                        </li>
+					</ul>
+
+					<p class="navbar-text navbar-right hidden-xs">CTRL-Space to evaluate expressions from anywhere.</p>
+				</div>
 			</div>
 		</nav>
 
@@ -36,6 +57,7 @@
 
 			{{ content }}
 
+			<p class="footer text-muted">Copyright Richard Carson, 2022</p>
 		</div>
         
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
