--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
 		<div class="container" style="padding-top: 25px;">
 
 			{{ content }}
-
+			
+			<p class="footer text-muted"><a href="https://twitter.com/_rscarson" class="pull-left"><img src="/img/twitter.png" alt="twitter" height="16"/> Copyright Richard Carson, 2022</p>
 		</div>
         
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
