fix bug in help

--- a/_layouts/lavendeux.html
+++ b/_layouts/lavendeux.html
@@ -57,7 +57,7 @@
 
 			{{ content }}
 
-			<p class="footer text-muted"><a href="https://twitter.com/_rscarson" class="pull-left"><img src="img/twitter.png" alt="twitter" height="16"/> Copyright Richard Carson, 2022</p>
+			<p class="footer text-muted"><a href="https://twitter.com/_rscarson" class="pull-left"><img src="/img/twitter.png" alt="twitter" height="16"/> Copyright Richard Carson, 2022</p>
 		</div>
         
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
