--- a/_layouts/lavendeux.html
+++ b/_layouts/lavendeux.html
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="/lavendeux/downloads">All Downloads</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/lavendeux/extensions">Browse Extensions</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="https://github.com/rscarson/Lavendeux">View on Github</a>
                         </li>
                         <li class="nav-item">
@@ -57,7 +60,15 @@
 
 			{{ content }}
 
-			<p class="footer text-muted"><a href="https://twitter.com/_rscarson" class="pull-left"><img src="/img/twitter.png" alt="twitter" height="16"/> Copyright Richard Carson, 2022</p>
+			<p class="footer text-muted">
+
+				<a href="https://www.paypal.com/donate/?business=UXKPLM89RVU5L&no_recurring=0&item_name=Thank+you+for+supporting+open-source+software%21&currency_code=CAD">
+					Support Lavendeux by buying me a coffee
+				</a>
+				<a href="https://twitter.com/_rscarson" style="float: right">
+					<img src="/img/twitter.png" alt="twitter" height="16"/>
+				</a>
+				</p>
 		</div>
         
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
