zarban and fix extensions

--- a/_layouts/zarban.html
+++ b/_layouts/zarban.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Zarban's Grotto</title>
-    <link rel="stylesheet" href="css/zarban.css">
-    <script type="module" src="js/web_play.js"></script>
+    <link rel="stylesheet" href="/css/zarban.css">
+    <script type="module" src="/js/web_play.js"></script>
   </head>
   <body>
     {{ content }}
