--- a/css/zarban.css
+++ b/css/zarban.css
@@ -2,6 +2,7 @@ html,body {
     background-color: #333;
     color: #00AA20;
     font-family: "Lucida Console", "Courier New", monospace;
+    font-size: 1em;
 }
 
 #zarban_gameboard {
