--- a/_layouts/lavendeux.html
+++ b/_layouts/lavendeux.html
@@ -41,6 +41,9 @@
                             <a class="nav-link" href="/lavendeux/downloads">All Downloads</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="/lavendeux/docs">Documentation</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="/lavendeux/extensions">Browse Extensions</a>
                         </li>
                         <li class="nav-item">
