--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-			<a class="navbar-brand" href="#">Navbar</a>
+			<a class="navbar-brand" href="/">@rscarson</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			  <span class="navbar-toggler-icon"></span>
 			</button>
@@ -31,7 +31,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			  <ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-				  <a class="nav-link" href="/">Home</a>
+				  <a class="nav-link" href="https://github.com/rscarson">GitHub</a>
 				</li>
 				<li class="nav-item">
 				  <a class="nav-link" href="/blog">Blog</a>
